--- a/assets/sass/vha/pages/home/mission/_index.scss
+++ b/assets/sass/vha/pages/home/mission/_index.scss
@@ -4,7 +4,7 @@
     #nci2i-mission {
 
         @media (min-width: 480px) and (max-width: 640px) {
-            margin-top: 60vw; 
+            margin-top: 75vw; 
         }
 
         @media (max-width: 479px) and (min-width: 401px) {
@@ -16,7 +16,7 @@
         }
 
         @media (max-width: 320px) {
-            margin-top: 65vw; 
+            margin-top: 55vw; 
         }
 
         @include at-media(tablet-lg) {
